update images to postgres v14 and pgadmin4 v6

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,25 @@
-version: '3.7'
+version: '3'
 
 services:
   db:
-    image: postgres:13
+    image: postgres:14
     restart: always
     environment:
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: secret
+      POSTGRES_PASSWORD: pass123
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
 
   pgadmin:
-    image: dpage/pgadmin4:5
+    image: dpage/pgadmin4:6
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.org
       PGADMIN_DEFAULT_PASSWORD: secret
     ports:
-      - '8080:80'
+      - '8081:81'
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     links:
