update psql-server link name for pgadmin4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     links:
-      - 'db:pgsql-server'
+      - 'db:psql-server'
 
 volumes:
   db-data:
