--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,31 @@
-version: '3'
+version: '3.8'
 
 services:
-  db:
-    image: postgres:14
+  postgres:
+    image: postgres:14.2-alpine
+    container_name: dev-postgres
     restart: always
     environment:
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: pass123
+      POSTGRES_PASSWORD: S3cret
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - 5432:5432
 
   pgadmin:
-    image: dpage/pgadmin4:6
+    image: dpage/pgadmin4:6.7
+    container_name: dev-pgadmin
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.org
-      PGADMIN_DEFAULT_PASSWORD: pass123
+      PGADMIN_DEFAULT_PASSWORD: S3cret
     ports:
-      - '8081:80'
+      - 8080:80
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     links:
-      - 'db:psql-server'
+      - postgres:postgres-server
 
 volumes:
   db-data:
