--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: S3cret
+      APP_DB_USER: docker
+      APP_DB_PASS: docker
+      APP_DB_NAME: docker
     volumes:
+      - ./initdb:/docker-entrypoint-initdb.d/
       - postgres-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
