--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     image: postgres:15.2-alpine
     container_name: dev-postgres
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: S3cret
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
       APP_DB_USER: docker
       APP_DB_PASS: docker
       APP_DB_NAME: docker
