--- a/compose.yaml
+++ b/compose.yaml
@@ -1,34 +1,28 @@
 services:
   postgres:
-    image: postgres:17.0-alpine
-    container_name: dev-postgres
+    image: postgres:17.5-bookworm
+    container_name: electric-sql-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
-      # APP_DB_USER: docker
-      # APP_DB_PASS: docker
-      # APP_DB_NAME: docker
+      APP_DB_USER: dev
+      APP_DB_PASS: dev
+      APP_DB_NAME: dev
     volumes:
-      # - ./initdb:/docker-entrypoint-initdb.d/
+      - ./initdb:/docker-entrypoint-initdb.d/
+      - ./custom_pg_hba.conf:/etc/postgresql/custom_pg_hba.conf:ro
       - postgres-data:/var/lib/postgresql/data
+    command:
+      - "postgres"
+      - "-c"
+      - "wal_level=logical"
+      # Optional: To enforce SSL connections, you might also need to
+      # mount a custom pg_hba.conf and set hba_file
+      - "-c"
+      - "hba_file=/etc/postgresql/custom_pg_hba.conf"
     ports:
       - 5432:5432
-      # pgadmin:
-      #   image: dpage/pgadmin4:8.4
-      #   container_name: dev-pgadmin
-      #   depends_on:
-      #     - postgres
-      #   environment:
-      #     PGADMIN_DEFAULT_EMAIL: admin@admin.org
-      #     PGADMIN_DEFAULT_PASSWORD: S3cret
-      #   ports:
-      #     - 8080:80
-      #   volumes:
-      #     - pgadmin-data:/var/lib/pgadmin
-      #   links:
-      #     - postgres
 volumes:
   postgres-data:
 
-# pgadmin-data:
