--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,14 @@
 services:
   postgres:
     image: postgres:17.5-bookworm
-    container_name: electric-sql-postgres
+    container_name: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-      APP_DB_USER: dev
-      APP_DB_PASS: dev
-      APP_DB_NAME: dev
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      APP_DB_USER: ${APP_DB_USER}
+      APP_DB_PASS: ${APP_DB_PASS}
+      APP_DB_NAME: ${APP_DB_NAME}
     volumes:
       - ./initdb:/docker-entrypoint-initdb.d/
       - ./custom_pg_hba.conf:/etc/postgresql/custom_pg_hba.conf:ro
@@ -23,6 +23,19 @@ services:
       - "hba_file=/etc/postgresql/custom_pg_hba.conf"
     ports:
       - 5432:5432
+    healthcheck:
+      # This test ensures that other services only attempts to connect once Postgres is fully ready.
+      # It uses the standard pg_isready utility to check the database connection status.
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - pg-net
+
 volumes:
   postgres-data:
 
+networks:
+  pg-net:
+    driver: bridge
