--- a/compose.yaml
+++ b/compose.yaml
@@ -1,26 +1,27 @@
 services:
   postgres:
-    image: postgres:17.5-bookworm
+    image: postgres:18-bookworm
     container_name: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      APP_DB_USER: ${APP_DB_USER}
-      APP_DB_PASS: ${APP_DB_PASS}
-      APP_DB_NAME: ${APP_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-postgres}
+      # APP_DB_USER: ${APP_DB_USER}
+      # APP_DB_PASS: ${APP_DB_PASS}
+      # APP_DB_NAME: ${APP_DB_NAME}
     volumes:
-      - ./initdb:/docker-entrypoint-initdb.d/
-      - ./custom_pg_hba.conf:/etc/postgresql/custom_pg_hba.conf:ro
-      - postgres-data:/var/lib/postgresql/data
+      # Optional: You can mount initialization scripts to set up your database schema or seed data.
+      # - ./initdb:/docker-entrypoint-initdb.d/
+      # - ./custom_pg_hba.conf:/etc/postgresql/custom_pg_hba.conf:ro
+      - postgres-data:/var/lib/postgresql/18/docker
     command:
       - "postgres"
       - "-c"
       - "wal_level=logical"
       # Optional: To enforce SSL connections, you might also need to
       # mount a custom pg_hba.conf and set hba_file
-      - "-c"
-      - "hba_file=/etc/postgresql/custom_pg_hba.conf"
+      # - "-c"
+      # - "hba_file=/etc/postgresql/custom_pg_hba.conf"
     ports:
       - 5432:5432
     healthcheck:
